# physical-ai-textbook

./: .gitignore  404.html  AUTH_INTEGRATION_README.md  BETTER_AUTH_SETUP.md  index.html  sitemap.xml
.specify/memory/: constitution.md
assets/css/: styles.2bda5a55.css  styles.ccf49560.css
assets/js/: 01a85c17.8fb4a2d5.js  05d6da13.9dd7c66d.js  17896441.986f67b9.js  17896441.e4683592.js  1be78505.c7ea2109.js  1f391b9e.26693641.js  3720c009.5fcca5ca.js  3720c009.ad9d78a7.js  393be207.e3c330e0.js  3e90f027.3a732dc7.js  3e90f027.cd61634d.js  3eead18e.d13548e4.js  55960ee5.d9ae122e.js  55fdc196.c93fe0b0.js  59362658.6bd8b77d.js  597.91bc137a.js  6875c492.926bf4ef.js  6f1b43ad.3f039486.js  73664a40.f038f522.js  7661071f.b8d5f22b.js  814f3328.e15ef10f.js  84f71866.2b3ee6a4.js  8717b14a.80d4ae55.js  88baea3b.8040fe6a.js  90.d3df7cfb.js  925b3f96.39d7c471.js  935f2afb.2b4c4fe8.js  (+26 more)
auth-server/: .gitignore  package-lock.json  package.json  server.js
back/: .env  .gitignore  API_SERVER_README.md  agent.py  agent_runner.py  api.py  auth_api.py  better_auth_config.py  main.py  main_auth.py  pyproject.toml  retrieving.py  test_server.py  verify_fixes.py
backend/: .env  alembic.ini  pyproject.toml  rag_api.db
backend/alembic/: env.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/rag_api/: agent.py  main.py  services.py
backend/src/rag_api/database/: config.py  crud.py  models.py
blog/: atom.xml  index.html  rss.xml
docusaurus/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
markdown-page/: index.html
(+53 files in other folders)
